<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_name"
        android:textSize="20sp"
        android:padding="8dp"
        android:text="@string/event_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_location"
        android:textSize="14sp"
        android:text="@string/event_location"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_description"
        android:textSize="14sp"
        android:text="@string/event_description"/>

</LinearLayout>