<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name">
    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/home_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <GridLayout
        android:id="@+id/grid_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageButton
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/call_us"
            android:src="@drawable/ic_baseline_call_110" />

        <ImageButton
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/navigate_to_the_office"
            app:srcCompat="@drawable/ic_baseline_navigation_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/call_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/navigate_to_the_office" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_Layout"
        android:padding="5dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            app:srcCompat="@drawable/f_logo_rgb_blue_58"
            android:contentDescription="@string/facebook"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/instagram_glyph_gradient_rgb"
            android:contentDescription="@string/instagram"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/twitter"
            android:outlineAmbientShadowColor="@color/white"
            app:srcCompat="@drawable/_021_twitter_logo___blue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blueleaf"
            android:textColor="@color/white"
            android:shadowColor="@color/Ashton_Blue"
            android:textColorLink="@color/Ashton_Blue"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>